<resources>
    <string name="app_name">Lesson_2</string>
    <string name="town">Текущее местоположение</string>
    <string name="date">дата</string>
    <string name="time">время</string>
    <string name="temp">+10</string>
    <string name="celsius">C</string>
    <string name="for_days">По дням</string>
    <string name="day1">День1</string>
    <string name="temp_day1">+10</string>
    <string name="day2">День2</string>
    <string name="temp_day2">+10</string>
    <string name="day3">День3</string>
    <string name="temp_day3">+10</string>
    <string name="day4">День4</string>
    <string name="temp_day4">+10</string>
    <string name="day5">День5</string>
    <string name="temp_day5">+10</string>
    <string name="day6">День6</string>
    <string name="temp_day6">+10</string>
    <string name="day7">День7</string>
    <string name="temp_day7">+10</string>
    <string name="sellect_town">Выбор местоположения</string>
    <string name="mosсow">Москва</string>
    <string name="sp">Санкт-Петербург</string>
    <string name="rostov">Ростов-на-Дону</string>
    <string name="find_town">Введите город</string>
    <string name="settings">Настройки</string>
    <string name="pressure">Давление</string>
    <string name="wetness">Влажность</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="dark_theme">Темная тема</string>
    <string name="switchTheme">Отл/Вкл</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byTheClock">По часам</string>
    <string name="_00Hours">00ч</string>
    <string name="_03Hours">03ч</string>
    <string name="_06Hours">06ч</string>
    <string name="_09Hours">09ч</string>
    <string name="_12Hours">12ч</string>
    <string name="_15Hours">15ч</string>
    <string name="_18Hours">18ч</string>
    <string name="_21Hours">21ч</string>
</resources>
